test/tests/compiler/1_int_constants/invalid_parse/unclosed_paren.plx
pub main( {
    return 0
}
